fix: minor css changes to remove scrollbars and accommodate ipad pro

--- a/src/styling/ContactUs.scss
+++ b/src/styling/ContactUs.scss
@@ -1,30 +1,37 @@
 @import './variables.scss';
 
 #contactPageContainer {
+    flex-grow:2;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     background-color: $offwhite;
 }
 
 .imageContainer {
+    margin-bottom: 20px;
     height: 40vh;
+    overflow:hidden;
+    position: relative;
     img {
         height: 100%;
         width: 100%;
         object-fit: cover;
-        z-index: -1;
+        position: absolute;
+        top: 0;
+        left: 0;
     }
 }
 
 .whiteContainer {
+    flex-grow: 2;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 50vh;
+    height: auto;
     .heading {
         font-family: 'Titan One', sans-serif;
         font-weight:lighter;
@@ -70,16 +77,17 @@
 
 }
 
-@media screen and (min-width: $laptop) {
+@media screen and (min-width: calc($laptop + 115px)) {
     #contactPageContainer {
         flex-direction: row;
         .imageContainer {
-            width: 50vw;
-            height: 90vh;
+            width: 50%;
+            height: auto;
+            margin-bottom: 0px;
         }
         .whiteContainer {
-            width: 50vw;
-            min-height: 90vh;
+            width: 50%;
+            height: auto;
             justify-content: center;
             .heading {
                 font-size: 40px;
